<resources>
    <string name="app_name">MobileNo Tracking</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="number_tracker">Number Tracker</string>
    <string name="search">Search</string>
    <string name="description">Please note that this app only tracks numbers registered in 2017 and earlier. We are continuously working to provide you with latest results</string>
    <string name="textview">TextView</string>
    <string name="total_records">Total Records :</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="database_name">Database Name :</string>
    <string name="database_status">Database Status :</string>
    <string name="todo">TODO</string>
    <string name="address">Address</string>
    <string name="_3008297312">3008297312</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="cnic">CNIC</string>
    <string name="registration_date">Registration Date</string>
    <string name="login">Login</string>
    <string name="password">password</string>

</resources>
